# vidverba

./: .gitattributes  .gitignore  ARCHITECTURE.md  MajorUIRebuild.md  README.md  config.toml  package-lock.json  package.json  server.js
public/: app.js  index.html  styles.css
scripts/: diagnose_whisper.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/: transcribe_video.py
src-tauri/src/: lib.rs  main.rs
