[package]
name = "vidverba"
version = "0.1.0"
description = "VidVerba desktop application"
authors = ["VidVerba"]
license = ""
repository = ""
edition = "2021"

[lib]
name = "vidverba_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2.7.1"
toml = "0.8"
which = "8"
